@@ -13,6 +13,7 @@ version 0.11.0:
 	* Perl got updates (reread plugins/PERL-HOWTO)
 	* Spell checker now uses gtkspell
 	* Auto-Away (thanks, yet again, to bmiller ;)
+	* More buddy pounce options
 
 version 0.10.3 (10/09/2000):
 	* Segfault when viewing user info fixed
